apps/artskorner/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artskorner-api-ingress
  namespace: artskorner
spec:
  ingressClassName: traefik # Added ingressClassName under spec
  rules:
  - host: api.gramnuri.com
    http:
      paths:
      - path: /
        pathType: Prefix # or ImplementationSpecific if your Traefik version prefers
        backend:
          service:
            name: artskorner-api # This should match the name of your service in service.yaml
            port:
              number: 80 # This should match the 'port' exposed by your service in service.yaml
